<resources>
    <string name="app_name">Incident Toolkit</string>
    <string name="tvIncidentCreationPageTitle">Incident Creation</string>
    <string name="IncidentName">Incident Name</string>
    <string name="IncidentType">Incident Type</string>
    <string name="IncidentLoc">Incident Location</string>
    <string name="submitIncident">Submit Incident</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="delete">Delete Record</string>
    <string name="tvIncidentPageTitle">Incident</string>
    <string name="error_out_bounds">Error: Out of Bounds</string>
    <string name="tvIncidentBriefingTitle">Incident Briefing</string>
    <string name="tvIncidentMapMarker">Incident Map / Sketch:</string>
    <string name="hint_image_longpress">(Long press to select new image)</string>
    <string name="situation_summary_title">Situation Summary and Safety Briefing:</string>
</resources>