<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvIncidentCreationPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:text="@string/tvIncidentCreationPageTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptIncidentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="20"
        android:hint="@string/IncidentName"
        android:inputType="text"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/tvIncidentCreationPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvIncidentCreationPageTitle" />

    <AutoCompleteTextView
        android:id="@+id/acIncidentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/IncidentType"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/tvIncidentCreationPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/ptIncidentName" />

    <AutoCompleteTextView
        android:id="@+id/acIncidentLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="20"
        android:hint="@string/IncidentLoc"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/tvIncidentCreationPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/acIncidentType" />

    <Button
        android:id="@+id/bSubmitIncident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/submitIncident"
        app:layout_constraintEnd_toStartOf="@+id/bRefreshIncidents"
        app:layout_constraintStart_toStartOf="@+id/tvIncidentCreationPageTitle"
        app:layout_constraintTop_toBottomOf="@+id/acIncidentLoc" />

    <Button
        android:id="@+id/bRefreshIncidents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/refresh"
        app:layout_constraintStart_toEndOf="@+id/bSubmitIncident"
        app:layout_constraintEnd_toStartOf="@id/bDeleteIncident"
        app:layout_constraintTop_toTopOf="@+id/bSubmitIncident" />

    <Button
        android:id="@+id/bDeleteIncident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bRefreshIncidents"
        app:layout_constraintTop_toTopOf="@+id/bSubmitIncident" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIncidentList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSubmitIncident" />


</androidx.constraintlayout.widget.ConstraintLayout>